# claude-task-master

./: .env.example  .gitignore  .taskmasterconfig  README.md  debug_cli.py  debug_validation.py  js_and_python_impl_Analysis_Report.md  llms-install.md  project_plan.json  pyproject.toml  taskmasterconfig.json
.cursor/rules/: commands.mdc  dependencies.mdc  dev_workflow.mdc  taskmaster.mdc  tasks.mdc
assets/: scripts_README.md
conport_export/: decision_log.md  product_context.md  progress_log.md  system_patterns.md
conport_export/custom_data/: ProjectAnalysisReports.md  ProjectGlossary.md
context_portal/: context.db
context_portal/conport_vector_data/: chroma.sqlite3
docs/: command-reference.md  refactoring_agent_core.md
python_src/: ai_services_unified.py  config_manager.py
python_src/task_manager/: add_subtask.py  add_task.py  clear_subtasks.py  expand_all_tasks.py  expand_task.py  find_next_task.py  generate_task_files.py  list_tasks.py  parse_prd.py  remove_subtask.py  set_task_status.py  update_subtask_by_id.py  update_task_by_id.py
src/: __init__.py  agent_prompts.py  config_manager.py  data_models.py  persistence_manager.py  task_master_mcp.py  test.py
src/agent_core/: __init__.py  assistant.py  dependency_logic.py  llm_config.py  llm_generator.py  llm_manager.py  llm_models.py  llm_provider.py  llm_services.py  main.py  mcp_handler.py  plan_builder.py  planning_manager.py  project_io.py  project_manager.py  task_manager.py  task_operations.py
src/cli/: __init__.py  init_llm.py  main.py  models.py  planning.py  project.py  task_generation.py  task_modification.py  task_query.py  tasks.py  utils.py
tests/: README.md  __init__.py  conftest.py
(+68 files in other folders)
